networkpolicies/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: app-net
  labels:
    app: backend
spec:
  containers:
  - name: flask
    image: tiangolo/uwsgi-nginx-flask:python3.8
    ports:
    - containerPort: 5000
