networkpolicies/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: app-net
  labels:
    app: db
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
