networkpolicies/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: app-net
  labels:
    app: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
