networkpolicies/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app-net
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
