networkpolicies/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: app-net
spec:
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
