networkpolicies/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app-net
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
