networkpolicies/netpol-backend-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  namespace: app-net
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
  ports:
  - protocol: TCP
    port: 3306
  policyTypes:
  - Ingress
