networkpolicies/netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app-net
spec:
  podSelector: {}
  policyTypes:
  - Ingress
